sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:7: error: illegal start of simple expression
  for(i<-0 to getNombreValeurs()-2){
  ^